# FaceService

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: ConfigManager.cpp  ConfigManager.h  FaceConf.cpp  FaceConf.h  FaceRecogntionIBase.cpp  FaceRecogntionIBase.h  FaceStruct.h  FaceUploadResult.cpp  FaceUploadResult.h  PersistenceI.cpp  PersistenceI.h  QueueCondition.h  UserInclude.h  VIPLFaceRecognition.cpp  VIPLFaceRecognition.h  ZBase64.cpp  ZBase64.h  camera.h  config.h  person.h  public.cpp  public.h
